# fastapi-clean-example

./: .pre-commit-config.yaml  CONFIG_TOOL_README.md  DEVELOPMENT_GUIDE.md  Dockerfile  README.md  auth_setup_tui.py  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  loguru_config_tui.py  manage_config.py  pyproject.toml  settings.toml  settings.toml.example
.github/workflows/: ci.yml
configs/: README.md
configs/logging/: default.json
docs/: authentication.md  redis-setup.md
metadata/: README.md
models/: README.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml
monitoring/grafana/datasources/: prometheus.yml
nginx/: nginx.conf  nginx.prod.conf
repositories/: README.md
routers/: README.md
schemas/: README.md
scripts/: init-db.sql
services/: README.md
src/: README.md  __init__.py  main.py
src/application/: README.md
src/application/ports/: authentication_service.py  author_repository.py  book_repository.py  logger.py  logger_configuration.py  rate_limiter.py  task_queue.py  token_service.py  user_repository.py
src/application/services/: author_service.py  notification_service.py
src/application/use_cases/: authenticate_user.py  create_author.py  create_book.py  get_author.py  list_authors.py  load_logger_config.py  register_user.py  save_logger_config.py  social_login.py  test_logger_config.py
src/domain/: README.md
src/domain/entities/: README.md  author.py  book.py  logger_config.py  user.py
src/domain/services/: README.md  authentication_service.py  library_service.py
src/domain/value_objects/: README.md  auth_token.py  author_name.py  book_title.py  email.py  log_format.py  log_level.py  password.py  rotation_policy.py  user_role.py
src/infrastructure/: dependencies.py  logger_dependencies.py
src/infrastructure/config/: logger_config_adapter.py  settings.py
src/infrastructure/database/: connection.py
src/infrastructure/database/models/: author_model.py  book_model.py
src/infrastructure/database/repositories/: author_repository_impl.py  book_repository_impl.py
src/infrastructure/logging/: logger_adapter.py  loguru_config_adapter.py  setup.py
src/infrastructure/rate_limiting/: __init__.py  decorators.py  pyrate_adapter.py
src/infrastructure/tasks/: huey_adapter.py  taskiq_adapter.py
src/infrastructure/tasks/handlers/: example_tasks.py  notification_tasks.py
src/infrastructure/web/controllers/: api_author_controller.py  task_controller.py  web_author_controller.py
src/infrastructure/web/middleware/: __init__.py  rate_limiting.py
src/presentation/api/schemas/: author_schemas.py  book_schemas.py
src/presentation/cli/: __init__.py  commands.py  parser.py
src/presentation/tui/: __init__.py  app.py
static/css/: hexagon-theme.css
templates/: base.html
templates/authors/: create.html  detail.html  edit.html  list.html
templates/components/: alerts.html
tests/: README.md  __init__.py  conftest.py  test_config_tool.py  test_taskiq_integration.py
tests/accessibility/: __init__.py  test_tui_accessibility.py
tests/e2e/: test_complete_tui_flows.py
tests/fixtures/: __init__.py  mock_repositories.py  tui_fixtures.py
tests/integration/: test_app_integration.py  test_tui_workflows.py
tests/performance/: __init__.py  test_tui_performance.py
tests/unit/: test_main.py
tests/unit/application/: test_auth_use_cases.py
tests/unit/domain/: test_user_entity.py
tests/unit/presentation/: __init__.py  test_dynaconf_tui.py  test_loguru_tui.py
tests/utils/: __init__.py  tui_test_helpers.py
